Rework the task submit hooks, fixing the stuck form on error

--- a/client/main.css
+++ b/client/main.css
@@ -84,6 +84,11 @@ td > .form-group {
   margin-bottom: 0;
 }
 
+.form-group .has-error {
+  margin-top: 15px;
+  color: red;
+}
+
 .formio-editor-read-only-content {
   color: #707070;
   white-space: pre-wrap;
